Fix input tags heigth on mobile

--- a/web-development/application/static/admin/css/custom.css
+++ b/web-development/application/static/admin/css/custom.css
@@ -286,6 +286,10 @@ select.form-control, .dataTables_wrapper select{
     .bootstrap-datetimepicker-widget{
         width: 100% !important;
     }
+
+    .bootstrap-tagsinput{
+        height: auto;
+    }
 }
 
 @media (max-width: 768px) {
